--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "type": "module",
+  "main": "server.js",
+  "scripts": {
+    "start": "NODE_ENV=production node server.js",
+    "dev": "NODE_ENV=development nodemon server.js",
+    "debug": "node server.js --inspect"
+  },
   "dependencies": {
+    "express": "^4.18.2",
     "ws": "^8.14.2"
   },
   "devDependencies": {
