--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "NODE_ENV=production node server.js",
-    "dev": "NODE_ENV=development nodemon server.js",
-    "debug": "node server.js --inspect"
+    "dev": "PORT=3000 nodemon app/server.js",
+    "debug": "PORT=3000 node app/server.js --inspect",
+    "start": "node app/server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
